Fix tests + liquibase